# LLM-workshop-2024

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.md
02_data/: 02.ipynb  supplementary.py
03_architecture/: 03.ipynb  supplementary.py
04_pretraining/: 04.ipynb  Solution_Excersize.py  exercise-solutions.py  supplementary.py
05_weightloading/: 05_part-1.ipynb  05_part-2.ipynb  Solution_Excersize_1.py  Solution_Excersize_2.py  exercise-solutions_1.py  exercise-solutions_2.py
06_finetuning/: 06_part-1.ipynb  06_part-2.ipynb  06_part-3.ipynb  06_part-4.ipynb  Solution_Excersize.py  Untitled.ipynb  exercise-solutions.py
